@@ -1074,9 +1074,9 @@ int init_tcpip_plugin() {
         exit(0);
     }
     /////////////////////////////////////////////
-    /////////// INITILIZING PROTO_IMESSAGE //////////////////
-    if (!init_proto_imessage_struct()) {
-        fprintf(stderr, "Error initializing protocol proto_imessage\n Exiting\n");
+    /////////// INITILIZING PROTO_ALIEXPRESS //////////////////
+    if (!init_proto_aliexpress_struct()) {
+        fprintf(stderr, "Error initializing protocol PROTO_ALIEXPRESS\n Exiting\n");
         exit(0);
     }
     /////////////////////////////////////////////
