@@ -1445,12 +1445,14 @@ static const protocol_match doted_host_names[] = {
     {".highwinds.com", PROTO_HIGHWINDS, MMT_STATICSTRING_LEN(".highwinds.com")},
     {".internap.com", PROTO_INTERNAP, MMT_STATICSTRING_LEN(".internap.com")},
     {".level3.com", PROTO_LEVEL3, MMT_STATICSTRING_LEN(".level3.com")},
-    {".maxcdn.com", PROTO_MAXCDN, MMT_STATICSTRING_LEN(".maxcdn.com")},
+    {".maxcdn.com", PROTO_MAXCDN, MMT_STATICSTRING_LEN(".maxcdn.com"),MMT_CONTENT_CDN},
     {".stackpath.com", PROTO_STACKPATH, MMT_STATICSTRING_LEN(".stackpath.com")},
     {".messenger.com", PROTO_FBMSG, MMT_STATICSTRING_LEN(".messenger.com")},
     {".twitch.tv", PROTO_TWITCH, MMT_STATICSTRING_LEN(".twitch.tv")},
     {".ttvnw.com", PROTO_TWITCH, MMT_STATICSTRING_LEN(".ttvnw.com")},
     {".20minutes.fr", PROTO_20MINUTES, MMT_STATICSTRING_LEN(".20minutes.fr")},
+    {".aliexpress.com", PROTO_ALIEXPRESS, MMT_STATICSTRING_LEN(".aliexpress.com")},
+    {".alicdn.com", PROTO_ALIEXPRESS, MMT_STATICSTRING_LEN(".alicdn.com"), MMT_CONTENT_CDN},
     { NULL, 0, 0}
 };
 
